--- a/views/beaches/index.ejs
+++ b/views/beaches/index.ejs
@@ -1,13 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title>Document</title>
-</head>
-<body>
-    hello
-</body>
-</html>
+<%- include('../partials/header') %>
+
+<div class="mx-auto" style="width: 200px;">
+        <h1>Beach List</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Beach</th>
+                    <th>Location</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% beaches.forEach(function(b) { %>
+                    <tr>
+                        <td><%= b.beach %></td>
+                        <td><%= b.location %></td>
+                        <td><a href="/beaches/<%= b._id %>">DETAILS</a></td>
+                    </tr>
+                <% }); %>
+            </tbody>
+        </table>
+</div>
+
+<%- include('../partials/footer') %>
