--- a/views/beaches/new.ejs
+++ b/views/beaches/new.ejs
@@ -1,14 +1,19 @@
 <%- include('../partials/header') %>
 
+<div class="mx-auto text-center" style="width: 750px">
     <h2>Enter Beach Information</h2>
 <form action="/beaches" method="POST">
 	<label>Beach:
 	  <input type="text" name="beach">
 	</label><br>
-	<label>Location: 
+	<label>City/Sate: 
         <input type="text" name="location">
   </label><br>
+  <label>Address:
+      <input type="text" name="address">
+  </label>
   <input type="submit" value="Add Beach">
 </form>
+</div>
 
 <%- include('../partials/footer') %>
