--- a/views/beaches/show.ejs
+++ b/views/beaches/show.ejs
@@ -4,27 +4,26 @@
     <section>
         <div>Beach Name: <%= beach.beach %></div>
         <div>City/State: <%= beach.location %></div>
-        <div>Beach Addres: <%= beach.address %></div>
+        <div>Beach Address: <%= beach.address %></div>
     </section>
 
     <h2>Reviews</h2>
 
-    <% if (user) { %>
-    <form id="add-review-form" method="POST" action="/beaches/<%= beach._id %>/reviews">
-        <label>Reviews:</label>
-        <textarea name="content"></textarea>
-        <select name="rating">
-            <option value="5 Stars">5 Stars</option>
-            <option value="4 Stars">4 Stars</option>
-            <option value="3 Stars">3 Stars</option>
-            <option value="2 Stars">2 Stars</option>
-            <option value="1 Star">1 Star</option>
-        </select>
-        <input type="submit" value="Add Review">
-    </form>
-    <% } else { %>
-    <p>Must be logged in to leave a review</p>
-    <% } %>
+    
+        <% if (user) { %>
+        <form id="add-review-form" method="POST" action="/beaches/<%= beach._id %>/reviews">
+            <label>Reviews:</label>
+            <textarea name="content"></textarea>
+            <select name="rating">
+                <option value="5 Stars">5 Stars</option>
+                <option value="4 Stars">4 Stars</option>
+                <option value="3 Stars">3 Stars</option>
+                <option value="2 Stars">2 Stars</option>
+                <option value="1 Star">1 Star</option>
+            </select>
+            <input type="submit" value="Add Review">
+        </form>
+        <% } %>
 
     <table class="text-center">
         <thead>
@@ -34,21 +33,16 @@
                 <th>Review</th>
             </tr>
         </thead>
+        
         <% if (beach.reviews.length) { %>
-        <% beach.reviews.forEach(function(r) { %>
-
-        <tbody>
-            <tr>
-                <td><%= r.createdAt.toLocaleDateString() %></td>
-                <td><%= r.rating %></td>
-                <td><%= r.content %></td>
-
-                <% } else { %>
-                <h5>No Reviews Yet</h5>
-                <% }) %>
-                <% } %>
-                <% if (user) { %>
-                <% if ((beach.review._id.equals( user && userID ) || (review.userID.toString() == user._id.toString()) %>
+            <% beach.reviews.forEach(function(r) { %>
+                <tbody>
+                    <tr>
+                        <td><%= r.createdAt.toLocaleDateString() %></td>
+                        <td><%= r.rating %></td>
+                        <td><%= r.content %></td>  
+                    
+                <% if (r.email === user.email) { %>
                 <td>
                     <form action="/beaches/<%= beach._id %>/edit/<%= r._id %>" method="GET">
                         <button type="submit">Update Post</button>
@@ -59,12 +53,15 @@
                         <button type="submit">Remove Post</button>
                     </form>
                 </td>
-                <% )) %>
                 <% } %>
+              
             </tr>
+            <% }) %>
         </tbody>
     </table>
-
+    <% } else { %>
+    <h5>No Reviews Yet</h5>
+    <% } %>
 </div>
 
 <%- include('../partials/footer') %>
